@@ -10,6 +10,7 @@ v0.5.2
                            deepCopy: added copy buffer option.
                            eventCallback(function(level,msg){}): added to
                            catch libevent warnings/errors.
+                           close all unused fds after double fork in daemon()
     - rampart-curl
                            Fix for headers:{}
                            new - postJSON
